[project]
name = "usaspending-orm"
version = "0.7.0"
description = "A Python ORM wrapper for the USAspending.gov API with intuitive queries, automatic pagination, and smart caching"
authors = [
    {name = "Casey Dreier", email = "casey.dreier@planetary.org"}
]
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
keywords = [
    "usaspending", "federal-spending", "government-data",
    "api-wrapper", "orm", "contracts", "grants"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "requests>=2.32.4,<3.0.0",
    "cachier>=4.1.0,<5.0.0",
    "titlecase>=2.4.1,<3.0.0",
    "pyyaml>=6.0.2,<7.0.0"
]

[project.urls]
Homepage = "https://github.com/planetary-society/usaspending-orm"
Repository = "https://github.com/planetary-society/usaspending-orm"
Issues = "https://github.com/planetary-society/usaspending-orm/issues"
Documentation = "https://github.com/planetary-society/usaspending-orm/blob/main/README.md"

[dependency-groups]
dev = [
    "pytest>=8.4.1,<9",
    "requests-mock>=1.12.1,<2",
    "ruff>=0.12.7,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/usaspending"]

[tool.pytest.ini_options]
pythonpath = "src"
markers = [
    "integration: marks tests as integration tests (hit real USASpending API, run with: pytest -m integration)",
]
addopts = "-m 'not integration'"

# Ruff configuration
[tool.ruff]
line-length = 100
target-version = "py39"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes (undefined names, unused imports)
    "I",      # isort (import sorting)
    "UP",     # pyupgrade (modernize syntax for target-version)
    "B",      # flake8-bugbear (common bugs and design problems)
    "SIM",    # flake8-simplify (simplifiable code)
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # Line too long (formatter handles this)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101",   # Allow assert statements
    "SIM300"
]
"__init__.py" = [
    "F401",   # Allow unused imports (public API re-exports)
]

[tool.ruff.lint.isort]
known-first-party = ["usaspending"]

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true
